--- a/1.Version.md
+++ b/1.Version.md
@@ -1,10 +1,7 @@
-# PStA
-
-# functional magnetic resonance imaging  (fMRI)
+# PStA - functional magnetic resonance imaging  (fMRI)
 
 # Structure
 
----
 
 # I. Introduction
 
@@ -19,8 +16,6 @@ B. Differences between structural and functional MRI
 C. Functioning of fMRI imaging and physical principles
 
 # III. Technical aspects of fMRI devices
-
-(In Bezug auf Geräte: gern ebenfalls die gelernte HW voraussetzen und die Voraussetzungen zur fMRI darstellen)
 
 A. Device structure and functions
 
@@ -48,17 +43,19 @@ B. Clinical diagnosis and therapy planning: Use of fMRI in clinical practice
 
 C. Planning and monitoring of neurosurgical procedures
 
-# ~~VI. Challenges and limitations of fMRI~~
 
-~~A. Technical challenges and limitations~~
-
-~~B. Interpretation possibilities and validity of results~~
-
-# VII. Conclusion
+# VI. Conclusion
 
 A. Summary of key findings
 
 B. Outlook on the significance of fMRI in the future
+
+
+<br>
+<br>
+<br>
+<br>
+
 
 # I. Introduction
 
